<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>action_test</name>
  <version>0.7.3</version>
  <description>action tests</description>
  <maintainer email="TimCraig@Druai.com">Tim Craig</maintainer>
  <license>Apache License 2.0</license>
  <author email="TimCraig@Druai.com">Tim Craig</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>example_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

