<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>neato_lidar_publisher</name>
  <version>0.0.1</version>
  <description>LaserScan Publisher for Neato LDS</description>
  <maintainer email="TimCraig@Druai.com">Tim Craig</maintainer>
  <license>Apache License 2.0</license>
  <author>Tim Craig</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>Druai</build_depend>
  <build_depend>Boost</build_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>  
  <depend>OpenCV</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
